@@ -9,6 +9,9 @@ Trunk -  Unreleased
     HIVE-743. Let user specify serde for custom sctipts.
     (Namit Jain via rmurthy)
 
+    HIVE-749. add hive.optimize.pruner
+    (Zheng Shao via namit)
+
   IMPROVEMENTS
 
   OPTIMIZATIONS
